--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "nodemailer": "^6.9.0",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
   "engines": {
